@@ -43,6 +43,7 @@
 - added: `$UPDATE(schema, model, [options], [callback], [controller])` performs `schema.update()`
 - added: `$REMOVE(schema, [options], [callback], [controller])` performs `schema.remove()`
 - added: `U.streamer2()` same functionality as `U.streamer()` but it returns `Buffer` instead of `String`
+- added: `Number.round([precision])`
 
 - updated: (IMPORTANT) NoSQL binary divides files to independent directories for 1000 files per directory
 - updated: `GROUP()` by adding a new argument `url_prefix`
